--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-dom": "^18.0.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "zustand": "3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
